--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Alerta.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Alerta.form
@@ -125,7 +125,7 @@
                     <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="Si"/>
+                    <Property name="text" type="java.lang.String" value="OK"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[120, 30]"/>
                     </Property>
