--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Administrador/MenuAdmin.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Administrador/MenuAdmin.form
@@ -42,7 +42,7 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="2" attributes="0">
-                  <Component id="jButton2" linkSize="2" alignment="1" min="-2" pref="184" max="-2" attributes="0"/>
+                  <Component id="btnBuscarBedel" linkSize="2" alignment="1" min="-2" pref="184" max="-2" attributes="0"/>
                   <Component id="btnRegistrarBedel" linkSize="2" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -56,8 +56,8 @@
               <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
               <Component id="btnRegistrarBedel" linkSize="1" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="82" max="-2" attributes="0"/>
-              <Component id="jButton2" linkSize="1" min="-2" pref="35" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnBuscarBedel" linkSize="1" min="-2" pref="35" max="-2" attributes="0"/>
+              <EmptySpace pref="107" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -130,7 +130,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarBedelActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="btnBuscarBedel">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="10" green="10" red="10" type="rgb"/>
@@ -141,7 +141,7 @@
         <Property name="text" type="java.lang.String" value="Buscar Bedel"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBuscarBedelActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
