--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/RegistrarAula.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/RegistrarAula.form
@@ -149,6 +149,9 @@
                       <Connection code="new javax.swing.DefaultComboBoxModel&lt;&gt;(tipoDeReservas)" type="code"/>
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value=""/>
+                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                      <Dimension value="[250, 25]"/>
+                    </Property>
                   </Properties>
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="boxTipoDeReservaActionPerformed"/>
