--- a/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Administrador/RegistrarBedel.form
+++ b/tp_diseno/src/main/java/grupo3a/tp_diseno/Interfaces/Administrador/RegistrarBedel.form
@@ -246,6 +246,7 @@
                             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                               <Color blue="ff" green="ff" red="ff" type="rgb"/>
                             </Property>
+                            <Property name="enabled" type="boolean" value="false"/>
                             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                               <Dimension value="[64, 20]"/>
                             </Property>
